--- a/lecture_11_react_intro/README.me
+++ b/lecture_11_react_intro/README.me
@@ -4,7 +4,7 @@ To run this code, make sure you are in the project root
 
 * Install dependencies with `npm install`
 
-* Run the development server script wtih `npm run dev`
+* Run the development server script with `npm run dev`
 
 React docs at https://react.dev/
 
